--- a/experimental/configs/onboarding_cluster_config.yaml
+++ b/experimental/configs/onboarding_cluster_config.yaml
@@ -6,45 +6,52 @@ parameters:
   mgmt_ip:
     type: string
     label: f5 BIG-IP Management IP address
-    description: Management IP address of the BIG-IP
+    description: Management IP address of the BIG-IP.
   mgmt_port:
     type: number
     label: f5 BIG-IP Management Port
-    description: Management port of the BIG-IP
+    description: Management port of the BIG-IP.
   master_mgmt_ip:
     type: string
-    label: Management IP Address of the master BIG-IP.
-  master_name:
-    type: string
-    label: Management IP Address of the master BIG-IP.
+    label: f5 BIG-IP Master Management IP
+    description: Management IP Address of the master BIG-IP.
   config_sync_ip:
     type: string
-    label: ConfigSync IP Address of this BIG-IP.
+    label: f5 BIG-IP Cluster Self-IP 
+    description: ConfigSync IP Address of this BIG-IP.
   device_group:
     type: string
     label: f5 BIG-IP Device Group Name
-    description: Name of the BIG-IP Group to create or join
+    description: Name of the BIG-IP Group to create or join.
     default: Sync
   sync_type:
     type: string
     label: f5 BIG-IP Cluster Sync Type
+    description: Sync type for clustering.
     default: sync-failover
   auto_sync:
     type: boolean
-    label: Auto Sync
+    label: f5 BIG-IP Cluster Auto Sync
+    description: Enable config-sync auto-sync.
+    default: true
+  save_on_auto_sync:
+    type: boolean
+    label: f5 BIG-IP Cluster Save On Auto Sync
+    description: Enable config-sync auto-sync.
     default: true
   host_name:
     type: string
-    label: Host Name
-  save_on_auto_sync:
-    type: boolean
-    default: true
+    label: f5 BIG-IP Host Name
+    description: Device Name for the BIG-IP. 
   use_config_drive:
     type: boolean
+    label: Use Config Drive
+    description: Use config drive to provide meta and user data.
   wait_handle_curl:
     type: string
     label: Wait Handle 
     description: Resolved curl_cli value of the WaitConditionHandle that enables status signals to be sent back to Heat
+
 resources:
   onboard_cluster_config:
     type: OS::Heat::CloudConfig
@@ -61,7 +68,6 @@ resources:
                 __mgmt_ip__: { get_param: mgmt_ip}
                 __mgmt_port__: { get_param: mgmt_port }
                 __master_mgmt_ip__: { get_param: master_mgmt_ip}
-                __master_name__ : { get_param: master_name }
                 __device_group__: { get_param: device_group }
                 __sync_type__: { get_param: sync_type }
                 __auto_sync__: { get_param: auto_sync }
