updated release 1.1.0 - fix bigip module list - fix sample env file to show semicolon separated add-on keys

--- a/experimental/templates/cluster/2nic/f5_bigip_cluster_2_nic.yaml
+++ b/experimental/templates/cluster/2nic/f5_bigip_cluster_2_nic.yaml
@@ -69,7 +69,7 @@ parameters:
   bigip_addon_license_keys:
     type: comma_delimited_list
     label: Additional BIG-IP VE License Keys
-    description: f5 BIG-IP List of License Add-On Keys. Each item consists of a list of the add-on keys. 
+    description: f5 BIG-IP List of License Add-On Keys. Each list item consists of add-on keys separated by a semicolon <addonKey1;addonKey2> 
     default: 
       - 
   bigip_modules:
